# smelt

./: .gitignore  AGENTS.md  PLANS.md  README.md  pyproject.toml
artifacts/methods/: m04_exact_upstream_regression_smoke.json
configs/exact-upstream/: README.md  category_map.json  e0_transformer_cls_w100_g0.yaml  e0_transformer_cls_w100_g25.yaml  e0_transformer_cls_w100_g25_shuffled_labels.yaml  f1_cnn_cls_w100_g25.yaml
configs/moonshot-enhanced/: README.md  m01_cnn_all12_diff_fileagg.yaml  m01b_cnn_all12_diff_fileagg_seed2.yaml  (+16 more)
docs/specs/: smellnetplan.md
experiments/: README.md
scripts/: smelt_env_check.py  smelt_gcms_map_smoke.py  smelt_m01_existing_file_level.py  smelt_m01_existing_runs.py  smelt_m01_export.py  smelt_m01b_export.py  smelt_m01c_export.py  smelt_m02_export.py  smelt_m03_export.py  smelt_m04_export.py  smelt_metrics_smoke.py  smelt_preprocess_smoke.py  smelt_research_view_smoke.py  smelt_t10b_export.py  smelt_t11_export.py  smelt_verification_export.py
tests/: test_audit_base.py  test_cli.py  test_cnn_baseline.py  test_evaluation_metrics.py  test_file_level_aggregation.py  test_gcms_map.py  test_import.py  test_m01c_locked_protocol.py  test_m02_temporal_resnet.py  test_m03_file_level.py  test_m04_ensemble_bank.py  test_m05_protocol.py  test_moonshot_run.py  test_moonshot_verify.py  test_preprocessing.py  test_research_supervised_run.py  test_research_views.py  test_sensor_loader.py  test_t10b_diagnostics.py  test_t11_gcms_pretrain.py  test_transformer_baseline.py  test_transformer_verify.py  test_verification.py  test_verification_sprint.py
(+1094 files in other folders)
